# SynCore

./: CMakeLists.txt  MLCS_baseline.cpp  MLCS_decomposition.cpp  MLCS_index.cpp  MLCS_maintenance.cpp  MLCS_prune.cpp  README.md
datasets/test/: test.txt  test_index.txt  test_test_case.txt
utilities/: multilayer_graph.cpp  multilayer_graph.h  projected_graph.cpp  projected_graph.h  search_space.cpp  search_space.h  trie.cpp  trie.h
